--- a/RESEARCH/xgb_hyperparam_search.ipynb
+++ b/RESEARCH/xgb_hyperparam_search.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "4 2017-11-05  7389.5"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "4 2017-11-12  5878.1       1"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1253,14 +1253,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Строим признаки\n",
+    "# Вычисляем фазы Луны и элонгации планет (как в grid search!)\n",
+    "print(\"\\n🌙 Calculating moon phases...\")\n",
+    "from RESEARCH.astro_engine import calculate_phases_for_dates\n",
+    "df_phases = calculate_phases_for_dates(bodies_by_date_final, progress=True)\n",
+    "print(f\"   Phases: {len(df_phases)} rows\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Строим признаки (с фазами!)\n",
     "print(\"\\n🔧 Building features...\")\n",
     "df_features = build_full_features(\n",
     "    df_bodies_final,  # ← Используем пересчитанные данные\n",
     "    df_aspects,\n",
-    "    df_transits=None,\n",
-    "    include_pair_aspects=True,\n",
-    "    include_transit_aspects=False,\n",
+    "    df_phases=df_phases,  # ← ВАЖНО: добавляем фазы как в grid search!\n",
     "    exclude_bodies=config[\"exclude_bodies\"],\n",
     ")\n",
     "print(f\"   Features shape: {df_features.shape}\")\n"
