--- a/RESEARCH/birthdate_deep_search_2.ipynb
+++ b/RESEARCH/birthdate_deep_search_2.ipynb
@@ -662,7 +662,147 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Grid Search:  25%|██▌       | 658/2592 [08:42<26:40,  1.21it/s]"
+      "Grid Search:  26%|██▋       | 684/2592 [09:02<26:40,  1.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  28%|██▊       | 720/2592 [09:29<23:37,  1.32it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2038\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  29%|██▉       | 756/2592 [09:58<24:15,  1.26it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  31%|███       | 792/2592 [10:26<22:20,  1.34it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2038\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  32%|███▏      | 828/2592 [10:56<23:31,  1.25it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  33%|███▎      | 864/2592 [11:24<22:05,  1.30it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2038\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  35%|███▍      | 900/2592 [11:53<23:16,  1.21it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  35%|███▌      | 911/2592 [12:02<22:47,  1.23it/s]"
      ]
     }
    ],
