--- a/RESEARCH/birthdate_deep_search_2.ipynb
+++ b/RESEARCH/birthdate_deep_search_2.ipynb
@@ -802,7 +802,421 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Grid Search:  35%|███▌      | 911/2592 [12:02<22:47,  1.23it/s]"
+      "Grid Search:  36%|███▌      | 936/2592 [12:22<23:06,  1.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2038\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  36%|███▌      | 939/2592 [12:25<22:31,  1.22it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 NEW BEST: R_MIN=0.5903 MCC=0.1948 Gap=0.0141 | Orb=0.075 Win=200 Excl=None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  38%|███▊      | 972/2592 [12:52<23:24,  1.15it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  39%|███▉      | 1008/2592 [13:20<22:23,  1.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2038\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  40%|████      | 1044/2592 [13:50<25:58,  1.01s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  42%|████▏     | 1080/2592 [14:16<18:59,  1.33it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2038\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  43%|████▎     | 1116/2592 [14:45<19:32,  1.26it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  44%|████▍     | 1152/2592 [15:13<17:54,  1.34it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2038\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  46%|████▌     | 1188/2592 [15:42<19:22,  1.21it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  47%|████▋     | 1224/2592 [16:10<16:53,  1.35it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2038\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  49%|████▊     | 1260/2592 [16:39<18:07,  1.23it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  50%|█████     | 1296/2592 [17:08<17:52,  1.21it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2040\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  51%|█████▏    | 1332/2592 [17:36<16:08,  1.30it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  53%|█████▎    | 1368/2592 [18:05<17:39,  1.16it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2040\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  54%|█████▍    | 1404/2592 [18:33<20:22,  1.03s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  56%|█████▌    | 1440/2592 [18:59<14:46,  1.30it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2040\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  57%|█████▋    | 1476/2592 [19:29<14:56,  1.25it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  58%|█████▊    | 1512/2592 [19:58<14:36,  1.23it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2040\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  60%|█████▉    | 1548/2592 [20:30<15:33,  1.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  61%|██████    | 1584/2592 [20:59<13:49,  1.22it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 2040\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  62%|██████▎   | 1620/2592 [21:29<12:43,  1.27it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels created: 1506 samples\n",
+      "  UP: 753 (50.0%)\n",
+      "  DOWN: 753 (50.0%)\n",
+      "  Date range: 2017-11-05 -> 2026-01-30\n",
+      "Merged dataset: 3010 samples (ALL days, forward-filled)\n",
+      "Features: 1614\n",
+      "Split: Train=2107, Val=451, Test=452\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Grid Search:  63%|██████▎   | 1636/2592 [21:42<14:55,  1.07it/s]"
      ]
     }
    ],
