--- a/RESEARCH/birthtime_search.ipynb
+++ b/RESEARCH/birthtime_search.ipynb
@@ -5936,8 +5936,14 @@
    "main_language": "python",
    "notebook_metadata_filter": "-all"
   },
+  "kernelspec": {
+   "display_name": "btc",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
