--- a/RESEARCH/birthdate_deep_search_2.ipynb
+++ b/RESEARCH/birthdate_deep_search_2.ipynb
@@ -1986,6 +1986,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "btc",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -1996,7 +2001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
