--- a/RESEARCH/xgb_tuning_top30.ipynb
+++ b/RESEARCH/xgb_tuning_top30.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a94f37b5",
+   "id": "d0f92afc",
    "metadata": {},
    "source": [
     "# XGBoost Hyperparameter Tuning (Phase 2)\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61a89467",
+   "id": "1d186b02",
    "metadata": {},
    "source": [
     "## Imports"
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0f84b5cb",
+   "execution_count": 82,
+   "id": "3d7a082d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d8ce8edd",
+   "execution_count": 83,
+   "id": "d19bd1b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00f27a88",
+   "id": "6903cacd",
    "metadata": {},
    "source": [
     "## Project Root & Imports"
@@ -61,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b61b57d2",
+   "execution_count": 84,
+   "id": "022d3752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b055cb6",
+   "execution_count": 85,
+   "id": "48060ec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +97,13 @@
     ")\n",
     "from RESEARCH.numba_utils import warmup_jit, check_numba_available\n",
     "from RESEARCH.features import build_full_features, merge_features_with_labels, get_feature_columns\n",
-    "from RESEARCH.model_training import split_dataset, prepare_xy, check_cuda_available, calc_metrics"
+    "from RESEARCH.model_training import split_dataset, prepare_xy, check_cuda_available, calc_metrics\n",
+    "from sklearn.utils.class_weight import compute_sample_weight"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5a780c52",
+   "id": "e2dc7585",
    "metadata": {},
    "source": [
     "## Configuration"
@@ -110,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc0f49a0",
+   "execution_count": 86,
+   "id": "1a176f2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ad4822dc",
+   "execution_count": 87,
+   "id": "64c7fe28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "999c294f",
+   "execution_count": 88,
+   "id": "cac93eed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,8 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2ed786bb",
+   "execution_count": 89,
+   "id": "d6156e81",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -171,8 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6a375090",
+   "execution_count": 90,
+   "id": "4a92dfd7",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -189,8 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9168b0ec",
+   "execution_count": 91,
+   "id": "921882da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ea45e04",
+   "id": "62821869",
    "metadata": {},
    "source": [
     "## Load Candidates"
@@ -213,10 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "01acd0ac",
+   "execution_count": 92,
+   "id": "8a02c4d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏆 Loaded 2 candidates\n"
+     ]
+    }
+   ],
    "source": [
     "top_candidates = pd.DataFrame()\n",
     "\n",
@@ -232,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa774c4",
+   "id": "681fd301",
    "metadata": {},
    "source": [
     "## Initialize"
@@ -240,10 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "84269a51",
+   "execution_count": 93,
+   "id": "8a534377",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🖥️ Device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "settings = init_ephemeris()\n",
     "use_cuda, device = check_cuda_available()\n",
@@ -255,10 +272,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a43c5c2d",
+   "execution_count": 94,
+   "id": "6c3255df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 5677 rows from DB for subject=btc\n",
+      "Date range: 2010-07-18 -> 2026-01-31\n",
+      "📈 Market: 3014 days\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rut/ostrofun/RESEARCH/data_loader.py:55: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql_query(query, conn, params=params)\n"
+     ]
+    }
+   ],
    "source": [
     "df_market = load_market_data()\n",
     "df_market = df_market[df_market['date'] >= '2017-11-01'].reset_index(drop=True)\n",
@@ -267,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50856a6f",
+   "id": "2b8e7e03",
    "metadata": {},
    "source": [
     "## 🚀 PRE-COMPUTE EVERYTHING\n",
@@ -277,10 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "af057791",
+   "execution_count": 95,
+   "id": "1d486572",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📦 Unique coord modes: ['both', 'geo']\n",
+      "📦 Unique orb mults: [0.25]\n",
+      "📦 Unique gauss params: 2 combinations\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract unique values from candidates\n",
     "unique_coords = top_candidates['coord_mode'].unique().tolist()\n",
@@ -294,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8db56b5",
+   "id": "5b81b195",
    "metadata": {},
    "source": [
     "### 1. Pre-compute BODIES + ANGLES + PHASES (per coord_mode)"
@@ -303,9 +348,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6329451",
+   "id": "0d8de497",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⏳ Pre-computing bodies, angles, phases...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Coords:   0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
    "source": [
     "body_cache = {}  # coord_mode -> (df_bodies, geo_by_date, helio_by_date, angles_cache)\n",
     "phase_cache = {}  # coord_mode -> df_phases\n",
@@ -338,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fb13ea9",
+   "id": "d49092e0",
    "metadata": {},
    "source": [
     "### 2. Pre-compute ASPECTS (per coord_mode + orb_mult)"
@@ -347,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a3135c9",
+   "id": "b88a78b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb7315b5",
+   "id": "c6df402d",
    "metadata": {},
    "source": [
     "### 3. Pre-compute LABELS (per gauss_window + gauss_std)"
@@ -376,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a91d3ef",
+   "id": "c0a0edb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a92c81ec",
+   "id": "3f09f1ec",
    "metadata": {},
    "source": [
     "## Tuning Loop (FAST - only assembly + training)"
@@ -408,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19a85e17",
+   "id": "39528dec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +519,9 @@
     "    search = RandomizedSearchCV(\n",
     "        xgb_model, PARAM_DIST, n_iter=iter_limit, \n",
     "        scoring=RECALL_MIN_SCORER,  # Custom: min(recall_up, recall_down)\n",
-    "        cv=ps, n_jobs=N_JOBS, verbose=0, random_state=42, refit=False\n",
+    "        cv=ps, n_jobs=N_JOBS, verbose=0, \n",
+    "        random_state=42 + i,  # Different seed for each candidate = explore different HP combos\n",
+    "        refit=False\n",
     "    )\n",
     "    \n",
     "    try:\n",
@@ -473,7 +535,7 @@
     "            tree_method='hist' if device == 'cuda' else 'auto',\n",
     "            **best_params\n",
     "        )\n",
-    "        final_model.fit(X_train, y_train)\n",
+    "        final_model.fit(X_train, y_train, sample_weight=compute_sample_weight('balanced', y_train))\n",
     "        y_pred_val = final_model.predict(X_val)\n",
     "        metrics = calc_metrics(y_val, y_pred_val, labels=[0, 1])\n",
     "        \n",
@@ -497,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09b3d05a",
+   "id": "177ee82a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,6 +574,9 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
