--- a/RESEARCH/single_body_search.ipynb
+++ b/RESEARCH/single_body_search.ipynb
@@ -9588,6 +9588,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "btc",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -9598,7 +9603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
